tests/baselines/reference/parserGenericConstraint7.errors.txt
parserGenericConstraint7.ts(1,19): error TS2304: Cannot find name 'List'.
parserGenericConstraint7.ts(1,24): error TS2304: Cannot find name 'List'.


==== parserGenericConstraint7.ts (2 errors) ====
    class C<T extends List<List<T>>> {
                      ~~~~
!!! error TS2304: Cannot find name 'List'.
                           ~~~~
!!! error TS2304: Cannot find name 'List'.
    }